Fix bug with drag preview not showing

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -87,6 +87,7 @@
   height: 100%;
 
   .rbc-row-content-scroll-container {
+    height: 100%;
     overflow-y: scroll;
   }
 }
