--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -86,6 +86,7 @@
   height: 100%;
 
   .rbc-row-content-scroll-container {
+    height: 100%;
     overflow-y: scroll;
   }
 }
